#61 : fixing uuid management (#62)
* #61 - fixing uuid management

UUID datatype is detected in the Codegen Class before rendering so as
specific code can be generated based on "vendorExtensions"
